--- a/client/src/theme/variables/width.scss
+++ b/client/src/theme/variables/width.scss
@@ -4,6 +4,7 @@
 
 :root {
   --parsec-modal-width: 42rem;
+  --parsec-modal-max-height: 35rem;
   --parsec-min-content-width: 35rem;
   --parsec-max-content-width: 78rem;
   --parsec-max-title-width: 31.25rem;
